Added logic for selecting region using dropdown

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -64,29 +64,29 @@
 				<h1>REAP Dashboard</h1>
         <!-- <h3>New Zealand</h3> -->
         <div class="btn-group region-selector">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                  New Zealand <span class="fa fa-caret-down"></span>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span id="selected-region">
+                  Select Region</span> <span class="fa fa-caret-down"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                  <li class="dropdown-header">REAP Cohort 1</li>
-                  <li><a class="no-page-scroll" href="#">Andalusia, Spain</a></li>
-                  <li><a class="no-page-scroll" href="#">Finland</a></li>
-                  <li><a class="no-page-scroll" href="#">Istanbul, Turkey</a></li>
-                  <li><a class="no-page-scroll" href="#">Hangzhou, China</a></li>
-                  <li><a class="no-page-scroll" href="#">New Zealand</a></li>
-                  <li><a class="no-page-scroll" href="#">Scotland</a></li>
-                  <li><a class="no-page-scroll" href="#">Veracruz, Mexico</a></li>
-                  <li class="divider"></li>
                   <li class="dropdown-header">REAP Cohort 2</li>
-                  <li><a class="no-page-scroll" href="#">London, United Kingdom</a></li>
-                  <li><a class="no-page-scroll" href="#">Morocco</a></li>
-                  <li><a class="no-page-scroll" href="#">Moscow, Russia</a></li>
-                  <li><a class="no-page-scroll" href="#">Puerto Rico</a></li>
-                  <li><a class="no-page-scroll" href="#">Qatar</a></li>
-                  <li><a class="no-page-scroll" href="#">Rio de Janeiro, Brazil</a></li>
-                  <li><a class="no-page-scroll" href="#">Seoul, South Korea</a></li>
-                  <li><a class="no-page-scroll" href="#">Singapore</a></li>
-                  <li><a class="no-page-scroll" href="#">Valencia, Spain</a></li>
+                  <li><a class="no-page-scroll" href="./?region=london">London, United Kingdom</a></li>
+                  <li><a class="no-page-scroll" href="./?region=morocco">Morocco</a></li>
+                  <li><a class="no-page-scroll" href="./?region=moscow">Moscow, Russia</a></li>
+                  <li><a class="no-page-scroll" href="./?region=puertorico">Puerto Rico</a></li>
+                  <li><a class="no-page-scroll" href="./?region=qatar">Qatar</a></li>
+                  <li><a class="no-page-scroll" href="./?region=rio">Rio de Janeiro, Brazil</a></li>
+                  <li><a class="no-page-scroll" href="./?region=seoul">Seoul, South Korea</a></li>
+                  <li><a class="no-page-scroll" href="./?region=singapore">Singapore</a></li>
+                  <li><a class="no-page-scroll" href="./?region=valencia">Valencia, Spain</a></li>
+                  <li class="divider"></li>
+                  <li class="dropdown-header">REAP Cohort 1</li>
+                  <li><a class="no-page-scroll" href="./?region=spain">Andalusia, Spain</a></li>
+                  <li><a class="no-page-scroll" href="./?region=finland">Finland</a></li>
+                  <li><a class="no-page-scroll" href="./?region=istanbul">Istanbul, Turkey</a></li>
+                  <li><a class="no-page-scroll" href="./?region=hangzhou">Hangzhou, China</a></li>
+                  <li><a class="no-page-scroll" href="./?region=newzealand">New Zealand</a></li>
+                  <li><a class="no-page-scroll" href="./?region=scotland">Scotland</a></li>
+                  <li><a class="no-page-scroll" href="./?region=veracruz">Veracruz, Mexico</a></li>
                 </ul>
               </div> <!-- btn-group end -->
 			</div>
