added section-anchor for navigating to dashboard sections without the navbar covering the section headings

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -125,7 +125,9 @@
           </div>
 
           <div class="col-md-9 col-sm-7 dashboard-column">
-            <div class="row dashboard-panel" id="reap-team">
+            <div class="section-anchor" id="reap-team">
+            </div>
+            <div class="row dashboard-panel">
               <div class = "col-md-12">
                 <div class="row heading">
                   <ul class="nav nav-pills resource-header-nav reap-info-header">
@@ -190,7 +192,9 @@
               </div>
             </div> <!-- dashboard-panel end-->
 
-            <div class="row dashboard-panel" id="regional-metrics">
+            <div class="section-anchor" id="regional-metrics">
+            </div>
+            <div class="row dashboard-panel">
               <div class = "col-md-12">
                 <div class="row">
                   <ul class="nav nav-pills resource-header-nav reap-info-header">
@@ -337,7 +341,9 @@
             </div> <!-- dashboard-panel end-->
             
 
-            <div class="row dashboard-panel" id="reap-index">
+            <div class="section-anchor" id="reap-index">
+            </div>
+            <div class="row dashboard-panel">
               <div class = "col-md-12">
                 <div class="row">
                   <ul class="nav nav-pills resource-header-nav reap-info-header">
