added data for all Cohort 2 regions

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -74,7 +74,7 @@
                   <li><a class="no-page-scroll" href="./?region=moscow">Moscow, Russia</a></li>
                   <li><a class="no-page-scroll" href="./?region=puertorico">Puerto Rico</a></li>
                   <li><a class="no-page-scroll" href="./?region=qatar">Qatar</a></li>
-                  <li><a class="no-page-scroll" href="./?region=rio">Rio de Janeiro, Brazil</a></li>
+                  <!-- <li><a class="no-page-scroll" href="./?region=rio">Rio de Janeiro, Brazil</a></li> -->
                   <li><a class="no-page-scroll" href="./?region=seoul">Seoul, South Korea</a></li>
                   <li><a class="no-page-scroll" href="./?region=singapore">Singapore</a></li>
                   <li><a class="no-page-scroll" href="./?region=valencia">Valencia, Spain</a></li>
