--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -118,7 +118,7 @@
             <div class="row dashboard-panel" id="resource-links">
               <ul class="nav nav-pills nav-stacked">
                 <li><a href="#reap-team">REAP Team & Stakeholders<i class="fa fa-chevron-right pull-right"></i></a></li>
-                <li><a href="#reap-index">REAP Index<i class="fa fa-chevron-right pull-right"></i></a></li>
+                <!-- <li><a href="#reap-index">REAP Index<i class="fa fa-chevron-right pull-right"></i></a></li> -->
                 <li><a href="#regional-metrics">Primary Regional Metrics<i class="fa fa-chevron-right pull-right"></i></a></li>
               </ul>
             </div>
@@ -343,7 +343,7 @@
 
             <div class="section-anchor" id="reap-index">
             </div>
-            <div class="row dashboard-panel">
+            <div class="row dashboard-panel" id="reap-index-row">
               <div class = "col-md-12">
                 <div class="row">
                   <ul class="nav nav-pills resource-header-nav reap-info-header">
