Added logic to hide custom metrics if empty

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -248,21 +248,15 @@
                     </div>
                   </div> <!-- col-md-6 -->
 
-                  <div class='col-md-6 reap-index-col'>
+                  <div class='col-md-6 reap-index-col' id="custom-metrics-col">
                     <div class="row">
                       <h3>Custom Metrics (Education & Employment)</h3>
                       <div id="cmet-carousel" class="carousel slide" data-ride="carousel">
                         <!-- Wrapper for slides -->
-                        <div class="carousel-inner" id="cmet-charts" role="listbox">
-                          <div id="cmet0" class="item active">
-                          </div>
-                          <div id="cmet1" class="item">
-                          </div>
+                        <div class="carousel-inner" id="custom-metrics-charts" role="listbox">
                         </div>
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
-                          <li data-target='#cmet-carousel' data-slide-to='0' class='carousel-dot-control active'></li>
-                          <li data-target='#cmet-carousel' data-slide-to='1' class='carousel-dot-control'></li>
                         </ol>
 
                         <!-- Controls -->
