Addded logic for setting the flags of the various regions

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -97,16 +97,11 @@
         <div class="row">
           <div class="col-md-3 col-sm-5 dashboard-column">
             <div class="row dashboard-panel region-description-panel">
-              <div
-                <a href="./places/?location=andalusia-spain">
-                  <div class='reap-dashboard-country'>
-                    <div class="circle dark-blue-reap reap-dashboard-country">
-                      <img alt="Spain" class="country-img-nz" src="../assets/images/newzealand.png" />
-                      <img alt="Bottomcircle label" class="bottom-circle-label-0" src="../assets/images/bottomcircle_label.png" text="hello" />
-                      <p class="country-label-spain country-label-spec">New Zealand</p>
-                    </div>
+              <div>
+                <div class='reap-dashboard-country'>
+                  <div class="circle dark-blue-reap reap-dashboard-country" id="country-flag-container">
                   </div>
-                </a>
+                </div>
               </div>
                 <p id="region-description">
                 <span id="description-snippet">New Zealand prides itself as a smart, innovative nation. From ground-breaking cancer research, award winning digital content, to world leading dairy nutrition, our products and services are exported around the world.</span>
