Added region description

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -104,10 +104,10 @@
                 </div>
               </div>
                 <p id="region-description">
-                <span id="description-snippet">New Zealand prides itself as a smart, innovative nation. From ground-breaking cancer research, award winning digital content, to world leading dairy nutrition, our products and services are exported around the world.</span>
+                <span id="description-snippet"></span>
                 <input id="more-region-description-btn" class="btn btn-default dashboard-sm-btn" type="button" value="Read more">
-                <span id="more-region-description"> But much of our potential in this area remains unrealised and fostering a high performing science and innovation sector is key to our future economic well-being. Innovation is the name of the game for New Zealand. Kiwi companies are working hard to be smart, think sharper and get to market faster. New Zealanders are an ingenious people. We have a strong heritage of developing great ideas borne out of practical neccessity, or inspired brilliance, or simply an instinct of what might work. Like other governments around the world, the New Zealand government continues to signal the importance it places on science and innovation as a key driver of our economic wellbeing. The Ministry of Business, Innovation and Employment's (MBIE) Science and Innovation Group has been charged with lifting our economic, environmental and social performance by driving the science and innovation sector. We do this through our strategic leadership and through the networks we build across government, research organisations, business and industry. MBIE is committed to growing the number of driven, successful entrepreneurs who are willing to help grow the innocation ecosystem in New Zealand. We support a number of programmes and initiatives that all contribute to this goal. We are partnering with people and organisations across the ecosystem to drive the growth of highly-skilled entrepreneurs.
-                <input id="less-region-description-btn" class="btn btn-default dashboard-sm-btn" type="button" value="show less"></span>
+                <span id="more-region-description"></span>
+                <input id="less-region-description-btn" class="btn btn-default dashboard-sm-btn" type="button" value="Show less">
                 </p>
             </div>
             <div class="row dashboard-panel" id="resource-links">
