--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -134,42 +134,12 @@
                     <div class="row">
                       <h3>Team</h3>
                     </div>
-                    <div class="row dashboard-team-row">
-                      <div class="col-sm-3 col-xs-4">
+                    <div class="row dashboard-team-row" id="team-container">
+                      <!-- <div class="col-sm-3 col-xs-4">
                         <div class="dashboard-team-member sh-entrepreneur chart-blue-reap" rel="popover" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Regional Manager, Callaghan Innovation.">
                           <p>Erin Wansbrough</p>
                         </div>
-                      </div>
-                      <div class="col-sm-3 col-xs-4">
-                        <div class="dashboard-team-member sh-university chart-blue-reap" rel="popover" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="General Manager, BusinessNZ. Managing the Major Companies Group which is the top 100 companies, business development and retention and commercial partnerships">
-                          <p>Phil Love</p>
-                        </div>
-                      </div>
-                      <div class="col-sm-3 col-xs-4">
-                        <div class="dashboard-team-member sh-riskcapital chart-blue-reap" rel="popover" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="CEO, Auckland Tourism, Events and Economic Development. Brett has worked on a wide range of start-up projects in the ICT industry, both in New Zealand and overseas. He has held senior management positions for over 20 years in the private and public sectors. Recently, he served as Deputy Chief Executive, Business Innovation and Investments for the New Zealand Ministry of Science + Innovation and as the founding CEO of the NZICT Group. The NZICT Group is made up of New Zealand's leading ICT companies Currently, Brett serves as Vice Chairman of the Pacific Telecommunications Council, Advisory Council, and Chairman of the Network of Aotearoa Computer Clubhouses. He is also a member of the Board of Trustees of the Manaiakalani Education Trust.">
-                          <p>Brett O'Riley</p>
-                        </div>
-                      </div>
-                      <div class="col-sm-3 col-xs-4">
-                        <div class="dashboard-team-member sh-government chart-blue-reap" rel="popover" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="New Project Director. Peter Rose has an MBA from Cranfield School of Management (UK), he trained as a Chartered Accountant with KPMG and Citibank and is a member of the IOD. Peter's first fully fledged start-up was Hotech Edge Ltd, an IT company that he ran for 5 years, the business started in NZ before entering Australia, Thailand, the US and the UK, Hotech is now based out of the UK. He then moved into Private Equity and Venture Capital managing a portfolio of companies (startups through to mature businesses) for high net worth individuals before returning to the Corporate World at PGG Wrightson (Head of Strategy and Business Development) and more latterly with Ngai Tahu Property as GM Strategy and Business Development. Ngai Tahu are the Maori people of the southern islands of New Zealand. Ngai Tahu have commercial interests that total almost a billion dollars in assets. Peter sits on the Board of the NZ Merino Company and Flow Software, a business that he invested in when it had just one FTE, today Flow Software has offices in NZ and Australia with 25 FTE's.">
-                          <p>Peter Rose</p>
-                        </div>
-                      </div>
-                      <div class="col-sm-3 col-xs-4">
-                        <div class="dashboard-team-member sh-corporate chart-blue-reap" rel="popover" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Partner, MOVAC. David is a General Partner with venture capital firm MOVAC, based in Wellington, New Zealand (www.movac.co.nz). Since joining MOVAC in early 2006, David has been a partner in both of its funds. Fund 2 was a $15m start-up angel fund and the current fund, Fund 3, a $42m early expansion fund. Over the last 6 years David has reviewed over 500 businesses and taken eight through to investment, including negotiation, legals and due diligence. David is currently a director of three of MOVAC's ventures including PowerbyProxi, Kiwi Semiconductor, Migco Pharmaceuticals. Prior to joining MOVAC, David was an entrepreneur and spent 5 years setting up and running his own web based SaaS businesses with offices in New Zealand and the UK. David&#39;s earlier career was as a management consultant for Deloitte and IT program director for multi-million dollar corporate projects.">
-                          <p>David Beard</p>
-                        </div>
-                      </div>
-                      <div class="col-sm-3 col-xs-4">
-                        <div class="dashboard-team-member sh-entrepreneur chart-blue-reap" rel="popover" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Professor, University of Canterbury. As Deputy Vice-Chancellor at the University of Canterbury Ian Town brings a wealth of experience to the New Zealand tertiary education sector. Ian has held a range of portfolios at the University of Canterbury and is currently leading the project team engaged with Government in developing the University's strategic direction in earthquake recovery. Throughout his time he has retained a major interest in research strategy, including leading the University's strategic projects around the Performance Based Research Fund, research and innovation, links with commercial companies and led the establishment of Research Institutes. He initiated a number of relationships that form the basis of New Zealand ICT Innovation Institute (NZi3) including the partnership with IBM that lead to the establishment of the BlueFernTM supercomputer unit. He was trained in Medicine at the University of Otago was appointed as the Dean of the Christchurch School of Medicine &amp; Health Sciences, the position he held until his appointment at the University of Canterbury in 2005. His research career centred on clinical and applied research into respiratory disorders, mainly asthma, COPD, and pneumonia. He was the Director of the Canterbury Respiratory Research Group for twelve years, and has published more than 100 articles on a wide variety of respiratory conditions.">
-                          <p>Ian Town</p>
-                        </div>
-                      </div>
-                      <div class="col-sm-3 col-xs-4">
-                        <div class="dashboard-team-member sh-university chart-blue-reap" rel="popover" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Digital Sector Entrepreneur. Mitch Olson is Co-founder of SmallWorlds, New Zealand's largest social gaming company with over 10 million registered players. SmallWorlds is a next generation social game &amp; 3D virtual environment blending rich visuals, social interplay, and a healthy dose of imagination into an immersive and engaging experience. Members shape the world, selecting from thousands of items to create unique spaces. Whether nurturing exotic plants in gardens, crafting rare items or enjoying the companionship of friends in popular hang-out spots, there are a wide variety of enjoyable activities to suit any mood. Opportunities for adventure are endless, as citizens play the starring role in elaborate movie-like missions - or play the director by creating their own interactive narrative for others to enjoy.">
-                          <p>Mitch Olson</p>
-                        </div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                   <div class='col-md-6' id='pentacle-column'>
