Added font-awesome folder, added data source to all dashboard graphs, add MIT hacking medicine to resources section

--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
 		                        <img alt="Sarah" class="person-img" src="./assets/images/sarahjane.png" />
 		                        <div class="circle gray-reap overlay-circle"></div>
 		                        <p class="name-label white-text">
-		                          Sarah Jane</br>
+		                          Sarah Jane Maxted</br>
 		                          Acting Director of MIT REAP
 		                        </p>
 		                      </div>
-		                      <p class="person-caption">Sarah Jane</p>
+		                      <p class="person-caption">Sarah Jane Maxted</p>
 		                    </a>
 		                  </div>
 		                </div>
