--- a/resources/index.html
+++ b/resources/index.html
@@ -663,6 +663,19 @@
               </div>
               <div class="row-fluid col-md-12">
                 <div class='col-md-3 article-container'>
+                  <a href='http://hackingmedicine.mit.edu/handbook/hackathon-basics/'>
+                    <div class='article-inner'>
+                      <div class='article-image-container'>
+                        <img src='../assets/images/mit-hacking-medicine.jpg' class='article-image article-image-width'>
+                      </div>
+                      <div class='article-description'>
+                        <span class='article-title'>Hackathon Basics: Theme, Date, Location</span><br/>
+                        <span class='article-author'>MIT Hacking Medicine</span>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class='col-md-3 article-container'>
                   <a href='http://fortune.com/2015/06/16/philanthropists-back-energy-startups/'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
@@ -697,19 +710,6 @@
                       <div class='article-description'>
                         <span class='article-title'>A Compass For Navigating The Ever-changing Capital Landscape</span><br/>
                         <span class='article-author'>ICIC | Kim Zeuli, Sathya Vijayakumar and Lena Ferguson</span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class='col-md-3 article-container'>
-                  <a href='http://www.icic.org/ee_uploads/pdf/Financing_Growth_FINAL.pdf'>
-                    <div class='article-inner'>
-                      <div class='article-image-container'>
-                        <img src='../assets/images/icic-logo.png' class='article-image article-image-width'>
-                      </div>
-                      <div class='article-description'>
-                        <span class='article-title'>Financing Growth: A Practical Resource Guide for Small Businesses</span><br/>
-                        <span class='article-author'>ICIC</span>
                       </div>
                     </div>
                   </a>
