--- a/resources/more_related_articles.html
+++ b/resources/more_related_articles.html
@@ -1,4 +1,17 @@
 <div class='col-md-3 article-container'>
+  <a href='http://www.icic.org/ee_uploads/pdf/Financing_Growth_FINAL.pdf'>
+    <div class='article-inner'>
+      <div class='article-image-container'>
+        <img src='../assets/images/icic-logo.png' class='article-image article-image-width'>
+      </div>
+      <div class='article-description'>
+        <span class='article-title'>Financing Growth: A Practical Resource Guide for Small Businesses</span><br/>
+        <span class='article-author'>ICIC</span>
+      </div>
+    </div>
+  </a>
+</div>
+<div class='col-md-3 article-container'>
   <a href='http://www.icic.org/ee_uploads/publications/ICIC_JPMorganChase_Report.pdf'>
     <div class='article-inner'>
       <div class='article-image-container'>
