--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -8,7 +8,8 @@
 		<meta name="description" content="MIT REAP">
 		
 		<link href="../assets/css/main.css" media="all" rel="stylesheet" />
-		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.css" rel="stylesheet">
+		<!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.css" rel="stylesheet"> -->
+    <link href="../assets/font-awesome/css/font-awesome.css" rel="stylesheet">
     
 
 		<meta content="authenticity_token" name="csrf-param" />
@@ -454,12 +455,12 @@
     <script src="../assets/js/classie.js"></script>
     <script src="../assets/js/dashboard-data.js"></script>
     <script src="../assets/js/dashboard.js"></script>
-    <!--
     <script src="../assets/js/highcharts/highcharts.js"></script>
     <script src="../assets/js/highcharts/exporting.js"></script>
-    -->
+    <!--
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/4.1.5/highcharts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/4.1.5/modules/exporting.js"></script>
+    -->
     
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
