Hid cohort one from the dashboard dropdown menu

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -69,7 +69,7 @@
                   Select Region</span> <span class="fa fa-caret-down"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                  <li class="dropdown-header">REAP Cohort 2</li>
+                  <!-- <li class="dropdown-header">REAP Cohort 2</li> -->
                   <li><a class="no-page-scroll" href="./?region=london">London, United Kingdom</a></li>
                   <li><a class="no-page-scroll" href="./?region=morocco">Morocco</a></li>
                   <li><a class="no-page-scroll" href="./?region=moscow">Moscow, Russia</a></li>
@@ -79,7 +79,7 @@
                   <li><a class="no-page-scroll" href="./?region=seoul">Seoul, South Korea</a></li>
                   <li><a class="no-page-scroll" href="./?region=singapore">Singapore</a></li>
                   <li><a class="no-page-scroll" href="./?region=valencia">Valencia, Spain</a></li>
-                  <li class="divider"></li>
+                 <!--  <li class="divider"></li>
                   <li class="dropdown-header">REAP Cohort 1</li>
                   <li><a class="no-page-scroll" href="./?region=spain">Andalusia, Spain</a></li>
                   <li><a class="no-page-scroll" href="./?region=finland">Finland</a></li>
@@ -87,7 +87,7 @@
                   <li><a class="no-page-scroll" href="./?region=hangzhou">Hangzhou, China</a></li>
                   <li><a class="no-page-scroll" href="./?region=newzealand">New Zealand</a></li>
                   <li><a class="no-page-scroll" href="./?region=scotland">Scotland</a></li>
-                  <li><a class="no-page-scroll" href="./?region=veracruz">Veracruz, Mexico</a></li>
+                  <li><a class="no-page-scroll" href="./?region=veracruz">Veracruz, Mexico</a></li> -->
                 </ul>
               </div> <!-- btn-group end -->
 			</div>
@@ -131,7 +131,7 @@
                   </ul>
                 </div>
                 <div class="row">
-                  <div class='col-md-6'>
+                  <div class='col-md-6' id='team-col'>
                     <div class="row">
                       <h3>Team</h3>
                     </div>
@@ -238,7 +238,7 @@
                     </div>
                   </div> <!-- col-md-6 -->
 
-                  <div class='col-md-6 reap-index-col'>
+                  <div class='col-md-6 reap-index-col' id='regional-entrepreneurs-col'>
                     <div class="row">
                       <h3>Celebrated Regional Entrepreneurs</h3>
                       <div id="regional-entrepreneurs">
@@ -246,7 +246,7 @@
                     </div>
                   </div> <!-- col-md-6 -->
 
-                  <div class='col-md-6 reap-index-col'>
+                  <div class='col-md-6 reap-index-col' id='other-primary-metrics-col'>
                     <div class="row carousel-row">
                       <h3>Other Primary Metrics</h3>
                       <div id="other-metrics-carousel" class="carousel slide" data-ride="carousel">
