ensure that mouse over on the pentacles highlights the icons only if the user is on a md or lg device

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -131,7 +131,7 @@
                   </ul>
                 </div>
                 <div class="row">
-                  <div class='col-md-6' id='team-col'>
+                  <div class='col-md-6 reap-index-col' id='team-col'>
                     <div class="row">
                       <h3>Team</h3>
                     </div>
@@ -143,7 +143,7 @@
                       </div> -->
                     </div>
                   </div>
-                  <div class='col-md-6' id='pentacle-column'>
+                  <div class='col-md-6 reap-index-col' id='pentacle-column'>
                     <div class="row">
                       <h3>Linkages</h3>
                     </div>
