updated reap resources

--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
 						<li><a class="navbar-link" href="../#bottom-info-div" id="contact-us-link">Contact Us</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
-        <div class="pull-right navbar-banner"><a href="../#bottom-info-div" target="_top">Application deadline has passed, but if you are still interested please contact us</a></div>
+        <div class="pull-right navbar-banner"><a href="../#bottom-info-div" target="_top">Applications are being accepted for the 2016-2018 Cohort (launching October 2016)</a></div>
 			</nav>
 		</div>
 
