--- a/apply/index.html
+++ b/apply/index.html
@@ -47,7 +47,7 @@
 						<li><a class="navbar-link" href="../#bottom-info-div" id="contact-us-link">Contact Us</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
-        <div class="pull-right navbar-banner"><a href="../#bottom-info-div" target="_top">Application deadline has passed, but if you are still interested please contact us</a></div>
+        <div class="pull-right navbar-banner"><a href="../#bottom-info-div" target="_top">Applications are being accepted for the 2016-2018 Cohort (launching October 2016)</a></div>
 			</nav>
 		</div>
 
@@ -88,7 +88,7 @@
 									2 - Receive Admissions decision by MIT REAP committee
 								</p>
 								<p>
-									3 - Champion Submits Signed Letter of Agreement to reserve a spot in the 2014 Cohort (upon acceptance)
+									3 - Champion Submits Signed Letter of Agreement to reserve a spot in the 2016-2018 Cohort (upon acceptance)
 								</p>
 								<p>
 									4 - Submit Final Team Application (deadline TBD)
