--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -54,7 +54,7 @@
           </ul>
         </div><!-- /.navbar-collapse -->
             <div class="pull-right navbar-banner">
-              <a href="../#bottom-info-div" target="_top">Application deadline has passed, but if you are still interested please contact us</a>
+              <a href="../#bottom-info-div" target="_top">Applications are being accepted for the 2016-2018 Cohort (launching October 2016)</a>
             </div>
       </nav>
 		</div>
