--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</ul>
 				</div><!-- /.navbar-collapse -->
         		<div class="pull-right navbar-banner">
-        			<a href="./#bottom-info-div" target="_top">Application deadline has passed, but if you are still interested please contact us</a>
+        			<a href="./#bottom-info-div" target="_top">Applications are being accepted for the 2016-2018 Cohort (launching October 2016)</a>
         		</div>
 			</nav>
 		</div>
@@ -206,7 +206,7 @@
 
 					<div class="row country-row">
 						<div class='col-md-10 col-md-offset-1 col-sm-12 col-sm-offset-0'>
-							<a href="./places/?location=morocco" >
+							<a href="./dashboard/?region=morocco" >
 								<div class='col-sm-4 partner-country-index'>
 									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Morocco" class="country-img-wide" src="./assets/images/morocco.png" />
@@ -216,7 +216,7 @@
 								</div>
 							</a>
 
-							<a href="./places/?location=london-uk" >
+							<a href="./dashboard/?region=london" >
 								<div class='col-sm-4 partner-country-index'>
 									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Uk" class="country-img-scotland" src="./assets/images/uk.png" />
@@ -226,7 +226,7 @@
 								</div>
 							</a>
 
-							<a href="./places/?location=qatar" >
+							<a href="./dashboard/?region=qatar" >
 								<div class='col-sm-4 partner-country-index'>
 									<div class="circle light-blue-reap partner-country-index-2">
 										<img alt="Qatar" class="country-img-nz" src="./assets/images/qatar.png" />
@@ -236,7 +236,7 @@
 								</div>
 							</a>
 
-							<a href="./places/?location=moscow-russia" >
+							<a href="./dashboard/?region=moscow" >
 								<div class='col-sm-4 partner-country-index'>
 									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Russia" class="country-img-wide" src="./assets/images/russia.png" />
@@ -246,7 +246,7 @@
 								</div>
 							</a>
 
-							<a href="./places/?location=puerto-rico" >
+							<a href="./dashboard/?region=puertorico" >
 								<div class='col-sm-4 partner-country-index'>
 									<div class="circle light-blue-reap partner-country-index-2">
 										<img alt="Puertorico" class="country-img-turkey" src="./assets/images/puertorico.png" />
@@ -256,7 +256,7 @@
 								</div>
 							</a>
 
-							<a href="./places/?location=valencia-spain" >
+							<a href="./dashboard/?region=valencia" >
 								<div class='col-sm-4 partner-country-index'>
 									<div class="circle light-blue-reap partner-country-index-2">
 										<img alt="Spain" class="country-img-spain" src="./assets/images/spain.png" />
@@ -270,7 +270,7 @@
 
 					<div class="row country-row">
 						<div class='col-md-10 col-md-offset-1'>
-							<a href="./places/?location=singapore" >
+							<a href="./dashboard/?region=singapore" >
 								<div class='col-sm-4 partner-country-index'>
 									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Singapore" class="country-img-wide" src="./assets/images/singapore.png" />
@@ -280,7 +280,7 @@
 								</div>
 							</a>
 
-							<a href="./places/?location=rio-de-janeiro-brazil" >
+							<!-- <a href="./places/?location=rio-de-janeiro-brazil" >
 								<div class='col-sm-4 partner-country-index'>
 									<div class="circle light-blue-reap partner-country-index-2">
 										<img alt="Brazil" class="country-img-wide" src="./assets/images/brazil.png" />
@@ -289,8 +289,8 @@
 									</div>
 								</div>
 							</a>
-
-							<a href="./places/?location=seoul-south-korea" >
+ -->
+							<a href="./dashboard/?region=seoul" >
 								<div class='col-sm-4 partner-country-index'>
 									<div class="circle dark-blue-reap partner-country-index-2">
 										<img alt="Korea" class="country-img-scotland" src="./assets/images/korea.png" />
