Modified code to ensure that the dashboard main panel doesn't appear and disappear when the dashboard homepage is initially loaded

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -94,7 +94,7 @@
       <div class="container-fluid" id="dashboard-prompt">
         Please select a region from the menu above
       </div>
-      <div class="container-fluid" id="dashboard-main-panel">
+      <div class="container-fluid" id="dashboard-main-panel" style="display:none">
         <div class="row">
           <div class="col-md-3 col-sm-5 dashboard-column">
             <div class="row dashboard-panel region-description-panel">
